feat(api): sandbox default network block all organization property
